[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Textures/UI/8.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/UI/7.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/UI/10.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/UI/0.png" type="Texture" id=5]

[node name="UI" type="Node2D"]
position = Vector2( 15, 0 )
z_index = 999
script = ExtResource( 3 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( -2486, 1074 )
scale = Vector2( 3, 3 )
normal = ExtResource( 1 )
pressed = ExtResource( 1 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( -1929, 1074 )
scale = Vector2( 3, 3 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="Jump" type="TouchScreenButton" parent="."]
position = Vector2( 2084, 1074 )
scale = Vector2( 3, 3 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="Pause" type="TouchScreenButton" parent="."]
position = Vector2( 2084, -1395 )
scale = Vector2( 3, 3 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Jump" to="." method="_on_Jump_pressed"]
[connection signal="released" from="Jump" to="." method="_on_Jump_released"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
